force-app/main/default/objects/Selected_Answer__c/Selected_Answer__c.object-meta.xml
<CustomObject>
    <label>Selected Answer</label>
    <nameField>
        <label>Selected Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selected Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>