force-app/main/default/objects/Selected_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Selected Answers</relationshipLabel>
    <relationshipName>Selected_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>