force-app/main/default/objects/Selected_Answer__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Selected Answers</relationshipLabel>
    <relationshipName>Selected_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>