force-app/main/default/objects/Selected_Answer__c/fields/Taken_Survey__c.field-meta.xml
<CustomField>
    <fullName>Taken_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taken Survey</label>
    <referenceTo>Taken_Survey__c</referenceTo>
    <relationshipLabel>Selected Answers</relationshipLabel>
    <relationshipName>Selected_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>